[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://src/Objects/MoveTween.tscn" type="PackedScene" id=2]

[node name="Enemy" type="Node2D"]
position = Vector2( 172, 122 )
script = ExtResource( 1 )

[node name="Body" type="KinematicBody2D" parent="."]
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 65

[node name="Sprite" type="Sprite" parent="Body"]

[node name="Hitbox" type="Area2D" parent="Body"]
collision_layer = 0
collision_mask = 33

[node name="MoveTween" parent="." instance=ExtResource( 2 )]

[node name="Waypoints" type="Node2D" parent="."]

[connection signal="body_entered" from="Body/Hitbox" to="." method="_on_enemy_body_entered"]
[connection signal="body_exited" from="Body/Hitbox" to="." method="_on_enemy_body_exited"]
